Bug 1228827 - Sync correctly the bookmark separators positions. r=kitcambridge

MozReview-Commit-ID: 9nvZqIt2Xgu